# X-MoE

./: README.md  generate.py  main.py  pyproject.toml  train.py
easy_moe/: __init__.py  attention.py  data.py  moe.py  optimizer.py  trainer.py  wrapper.py
examples/: generate.py  tinystories.py  train.py
src/x_moe/: __init__.py  attention.py  data.py  moe.py  optimizer.py  trainer.py  wrapper.py
tests/: test_attention.py  test_bugfixes.py  test_graph_breaks.py  test_improvements.py  test_integration.py  test_optimizer.py  test_training.py  test_v3_methods.py  test_v4_methods.py
x_moe/: __init__.py  attention.py  moe.py  perf.py  trainer.py  wrapper.py
